tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:1:1:
  |
1 | language ESSENCE' 1.0
  | ^^^^^^^^^^^^^^^^^^^^^
Warning: Essence prime file detected, type checking is off

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:4:35:
  |
4 |         int(0..undefined(division by zero: 2 / 0 : `int`))
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:4:35:
  |
4 |         int(0..undefined(division by zero: 2 / 0 : `int`))
  |                                   ^
Missing )

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:6:54:
  |
6 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
  |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:6:54:
  |
6 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
  |                                                      ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:6:54:
  |
6 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
  |                                                      ^
Missing )

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:6:54:
  |
6 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
  |                                                      ^
Missing ]

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:6:54:
  |
6 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
  |                                                      ^
Missing of

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:7:28:
  |
7 |                            int(2, 0)] of bool
  |                            ^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:9:54:
  |
9 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
  |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:9:54:
  |
9 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
  |                                                      ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:9:54:
  |
9 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
  |                                                      ^
Missing )

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:9:54:
  |
9 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
  |                                                      ^
Missing ]

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:9:54:
  |
9 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
  |                                                      ^
Missing of

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:10:28:
   |
10 |                            int(1..0)] of int(0..0)
   |                            ^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
   |                                                      ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
   |                                                      ^
Missing )

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
   |                                                      ^
Missing ]

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 2 / 0 : `int`)),
   |                                                      ^
Missing of

tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:13:28:
   |
13 |                            int(1..0)] of bool
   |                            ^^^^^^^^^^^^^^^^^^
Skipped tokens
